# vala-editor

./: .gitignore  Makefile.am  README.md  configure.ac  vala-editor.edi.in
src/: Assistant.vala  Build.vala  Document.vala  DocumentManager.vala  Engine.vala  FileSourceView.vala  Locator.vala  Makefile.am  Project.vala  ProjectAssistant.vala  ProjectView.vala  Provider.vala  Report.vala  ReportTable.vala  Symbol.vala  SymbolTree.vala  Window.vala  main.vala
